--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>LEARNING IS FUN FOR JOY</title>
+<title>LEARNING IS FUN FOR JOY and friends</title>
 </head>
 <body>
 
-<h1>LEARNING NEW SKILLS</h1>
-
+<h1>LEARNING NEW PROGRAMMING SKILLS</h1>
 <p>In 2026, learning is fun for joy, learning html</p>
+<p>Maximum have you found a PC u can use?</p>
 
 </body>
 </html>
